--- a/model.ipynb
+++ b/model.ipynb
@@ -4,11 +4,23 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Modelling stock price data\n",
+    "### **Modelling stock price data**\n",
+    "\n",
+    "##### **Model SPY yearly data**\n",
+    "\n",
+    "Model SPY yearly price change data with macroeconomic features: emplyment, interest rates, house prices, consumer prices, credit etc.\n",
+    "\n",
+    "While correlation does not necessarly mean causation, modelling price change and finding the feature weights can give us an idea of how the stock market moves.\n",
+    "\n",
+    "Data:\n",
+    "1. Yahoo finance SPY price change\n",
+    "1. Bank if international settlements webpage [BIS](www.bis.org)\n",
+    "\n",
+    "##### **Model Quarterly stock data**\n",
     "\n",
     "We will model stock price data (log price or percentage change) using quarterly net earnings, US policy rates, property prices and employment data.\n",
     "\n",
-    "Before modelling, we will do some data validation to understand the distribution of each feature and their relationship with the dependent variables.\n",
+    "Before modelling, we will do some data validation to understand the distribution of each feature and their relationship with the dependent variable.\n",
     "\n",
     "We will use the following models:\n",
     "\n",
@@ -21,17 +33,423 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Data manipulation\n",
+    "import numpy as np\n",
+    "import pandas as pd"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# load data \n",
+    "df_spy = pd.read_csv('./data/SPY.csv') # monthly SPY data\n",
+    "df_cp = pd.read_excel('./data/consumer_prices.xlsx', sheet_name='data') # consumer prices, monthly\n",
+    "df_pp = pd.read_excel('./data/properties_prices.xlsx', sheet_name='data') # properity prices, quarterly\n",
+    "df_ir = pd.read_excel('./data/interest_rates.xlsx', sheet_name='monthly') # interest rates, monthly\n",
+    "df_tc = pd.read_excel('./data/totcredit.xlsx', sheet_name='quarterly_data') # total credit, quarterly\n",
+    "df_nfp = pd.read_excel('./data/nfp_total.xlsx') # nfp employment data, monthly"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Date</th>\n",
+       "      <th>Open</th>\n",
+       "      <th>High</th>\n",
+       "      <th>Low</th>\n",
+       "      <th>Close</th>\n",
+       "      <th>Adj Close</th>\n",
+       "      <th>Volume</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1993-02-01</td>\n",
+       "      <td>43.96875</td>\n",
+       "      <td>45.12500</td>\n",
+       "      <td>42.81250</td>\n",
+       "      <td>44.40625</td>\n",
+       "      <td>25.709480</td>\n",
+       "      <td>5417600</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1993-03-01</td>\n",
+       "      <td>44.56250</td>\n",
+       "      <td>45.84375</td>\n",
+       "      <td>44.21875</td>\n",
+       "      <td>45.18750</td>\n",
+       "      <td>26.161797</td>\n",
+       "      <td>3019200</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>1993-04-01</td>\n",
+       "      <td>45.25000</td>\n",
+       "      <td>45.25000</td>\n",
+       "      <td>43.28125</td>\n",
+       "      <td>44.03125</td>\n",
+       "      <td>25.612766</td>\n",
+       "      <td>2697200</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>1993-05-01</td>\n",
+       "      <td>44.09375</td>\n",
+       "      <td>45.65625</td>\n",
+       "      <td>43.84375</td>\n",
+       "      <td>45.21875</td>\n",
+       "      <td>26.303528</td>\n",
+       "      <td>1808000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>1993-06-01</td>\n",
+       "      <td>45.37500</td>\n",
+       "      <td>45.81250</td>\n",
+       "      <td>44.21875</td>\n",
+       "      <td>45.06250</td>\n",
+       "      <td>26.212654</td>\n",
+       "      <td>3438000</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "         Date      Open      High       Low     Close  Adj Close   Volume\n",
+       "0  1993-02-01  43.96875  45.12500  42.81250  44.40625  25.709480  5417600\n",
+       "1  1993-03-01  44.56250  45.84375  44.21875  45.18750  26.161797  3019200\n",
+       "2  1993-04-01  45.25000  45.25000  43.28125  44.03125  25.612766  2697200\n",
+       "3  1993-05-01  44.09375  45.65625  43.84375  45.21875  26.303528  1808000\n",
+       "4  1993-06-01  45.37500  45.81250  44.21875  45.06250  26.212654  3438000"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_spy.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>US</th>\n",
+       "      <th>Euro</th>\n",
+       "      <th>date_month</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>353.722</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>1945-12-01</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>354.332</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>1946-03-01</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>350.867</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>1946-06-01</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>346.826</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>1946-09-01</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>345.682</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>1946-12-01</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "        US  Euro date_month\n",
+       "0  353.722   NaN 1945-12-01\n",
+       "1  354.332   NaN 1946-03-01\n",
+       "2  350.867   NaN 1946-06-01\n",
+       "3  346.826   NaN 1946-09-01\n",
+       "4  345.682   NaN 1946-12-01"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_tc[\"date_month\"] = df_tc['Period'].apply(lambda dt: dt.replace(day=1))\n",
+    "df_tc.drop(['Period'], axis=1, inplace=True)\n",
+    "df_tc.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Year</th>\n",
+       "      <th>month</th>\n",
+       "      <th>nfp</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1980</td>\n",
+       "      <td>Jan</td>\n",
+       "      <td>90800.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1981</td>\n",
+       "      <td>Jan</td>\n",
+       "      <td>91033.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>1982</td>\n",
+       "      <td>Jan</td>\n",
+       "      <td>90565.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>1983</td>\n",
+       "      <td>Jan</td>\n",
+       "      <td>88990.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>1984</td>\n",
+       "      <td>Jan</td>\n",
+       "      <td>92673.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   Year month      nfp\n",
+       "0  1980   Jan  90800.0\n",
+       "1  1981   Jan  91033.0\n",
+       "2  1982   Jan  90565.0\n",
+       "3  1983   Jan  88990.0\n",
+       "4  1984   Jan  92673.0"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_nfp_melt = pd.melt(df_nfp, id_vars=['Year'], value_vars=df_nfp.columns, var_name='month', value_name='nfp')\n",
+    "df_nfp_melt.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_nfp_melt['date'] = df_nfp_melt.Year.astype('str') + \"-\" + df_nfp_melt.month.astype('str') "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>nfp</th>\n",
+       "      <th>date</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>90800.0</td>\n",
+       "      <td>1980-01-01</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>91033.0</td>\n",
+       "      <td>1981-01-01</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>90565.0</td>\n",
+       "      <td>1982-01-01</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>88990.0</td>\n",
+       "      <td>1983-01-01</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>92673.0</td>\n",
+       "      <td>1984-01-01</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       nfp       date\n",
+       "0  90800.0 1980-01-01\n",
+       "1  91033.0 1981-01-01\n",
+       "2  90565.0 1982-01-01\n",
+       "3  88990.0 1983-01-01\n",
+       "4  92673.0 1984-01-01"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_nfp_melt['date'] = pd.to_datetime(df_nfp_melt['date'])\n",
+    "df_nfp_melt.drop(['Year', 'month'], axis=1, inplace=True)\n",
+    "df_nfp_melt.head()"
+   ]
   }
  ],
  "metadata": {
-  "language_info": {
-   "name": "python"
+  "kernelspec": {
+   "display_name": "Python 3.9.5 64-bit",
+   "language": "python",
+   "name": "python3"
   },
-  "orig_nbformat": 4
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.9.5"
+  },
+  "orig_nbformat": 4,
+  "vscode": {
+   "interpreter": {
+    "hash": "11938c6bc6919ae2720b4d5011047913343b08a43b18698fd82dedb0d4417594"
+   }
+  }
  },
  "nbformat": 4,
  "nbformat_minor": 2
