new optimizer feature

--- a/qa-notebook.ipynb
+++ b/qa-notebook.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,17 +27,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
-    "stocks = ['aapl', 'msft']\n",
+    "stocks = ['eng.mc','ele.mc', 'itx.mc', 'bbva.mc', 'vid.mc', 'rep.mc', 'ibe.mc', 'or.pa',\n",
+    "                'san.pa', 'azn', 'regn', 'atvi', 'msft', 'team', 'googl', 'nvda', 'csx']\n",
     "start_date = datetime.date(2020, 1, 1)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -47,16 +48,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['aapl', 'msft', 'team', 'googl', 'nvda']"
+       "['eng.mc',\n",
+       " 'ele.mc',\n",
+       " 'itx.mc',\n",
+       " 'bbva.mc',\n",
+       " 'vid.mc',\n",
+       " 'rep.mc',\n",
+       " 'ibe.mc',\n",
+       " 'or.pa',\n",
+       " 'san.pa',\n",
+       " 'azn',\n",
+       " 'regn',\n",
+       " 'atvi',\n",
+       " 'msft',\n",
+       " 'team',\n",
+       " 'googl',\n",
+       " 'nvda',\n",
+       " 'csx']"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 46,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -67,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
@@ -76,7 +93,7 @@
        "datetime.date(2020, 1, 1)"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 47,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -87,32 +104,325 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[*********************100%***********************]  2 of 2 completed\n",
-      "\n",
-      "2 Failed downloads:\n",
-      "- AAPL: No data found for this date range, symbol may be delisted\n",
-      "- MSFT: No data found for this date range, symbol may be delisted\n"
+      "[*********************100%***********************]  17 of 17 completed\n"
      ]
     }
    ],
    "source": [
-    "df = get_data(stocks, start_date = \"2022-01-01\", end_date = \"2022-11-30\")       \n",
+    "df = get_data(stocks, start_date = \"2019-01-01\", end_date = \"2022-11-30\")       \n",
     "df = df['Adj Close']"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def cum_returns(stocks, wts):\n",
+    "\n",
+    "  weighted_returns = (wts * stocks.pct_change()[1:])\n",
+    "  weighted_returns = pd.DataFrame(weighted_returns)\n",
+    "  port_ret = weighted_returns.sum(axis=1)\n",
+    "  return (port_ret + 1).cumprod() "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "total_stocks = len(stocks)\n",
+    "weight = [1/total_stocks]*total_stocks\n",
+    "#call cumulative returns\n",
+    "returns = cum_returns(df, weight).reset_index()\n",
+    "returns.rename(columns={'Date':'date', 0:'ret'}, inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# optimizitation\n",
+    "from scipy.optimize import minimize \n",
+    "\n",
+    "def optimize_weights(returns, risk_free_return):\n",
+    "    \n",
+    "    n = returns.shape[1]\n",
+    "    initial_weights = np.ones(n) / n\n",
+    "    bounds = [(0, 1) for i in range(n)]\n",
+    "    constraints = ({'type': 'eq', 'fun': lambda x: np.sum(x) - 1})\n",
+    "    def neg_sharpe_ratio(weights, returns, risk_free_rate):\n",
+    "        portfolio_return = np.sum(returns.mean() * weights) * 252\n",
+    "        portfolio_volatility = np.sqrt(np.dot(weights.T, np.dot(returns.cov() * 252, weights)))\n",
+    "        sharpe_ratio = (portfolio_return - risk_free_rate) / portfolio_volatility\n",
+    "        return -sharpe_ratio\n",
+    "    result = minimize(fun=neg_sharpe_ratio, x0=initial_weights, args=(returns, risk_free_return), method='SLSQP', bounds=bounds, constraints=constraints)\n",
+    "    optimized_weights = result.x\n",
+    "    return optimized_weights"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "res = optimize_weights(df.pct_change(), 4)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 65,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>res</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>NVDA</th>\n",
+       "      <td>1.000000e+00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>SAN.PA</th>\n",
+       "      <td>6.272621e-13</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>ENG.MC</th>\n",
+       "      <td>5.107928e-13</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>VID.MC</th>\n",
+       "      <td>4.966791e-13</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>ELE.MC</th>\n",
+       "      <td>3.625156e-13</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>IBE.MC</th>\n",
+       "      <td>2.932307e-13</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>OR.PA</th>\n",
+       "      <td>2.622694e-13</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>ATVI</th>\n",
+       "      <td>2.265133e-13</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>REGN</th>\n",
+       "      <td>1.685388e-13</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>AZN</th>\n",
+       "      <td>1.089198e-13</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>ITX.MC</th>\n",
+       "      <td>1.077471e-13</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>MSFT</th>\n",
+       "      <td>0.000000e+00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>GOOGL</th>\n",
+       "      <td>0.000000e+00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>CSX</th>\n",
+       "      <td>0.000000e+00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>REP.MC</th>\n",
+       "      <td>0.000000e+00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>BBVA.MC</th>\n",
+       "      <td>0.000000e+00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>TEAM</th>\n",
+       "      <td>0.000000e+00</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                  res\n",
+       "NVDA     1.000000e+00\n",
+       "SAN.PA   6.272621e-13\n",
+       "ENG.MC   5.107928e-13\n",
+       "VID.MC   4.966791e-13\n",
+       "ELE.MC   3.625156e-13\n",
+       "IBE.MC   2.932307e-13\n",
+       "OR.PA    2.622694e-13\n",
+       "ATVI     2.265133e-13\n",
+       "REGN     1.685388e-13\n",
+       "AZN      1.089198e-13\n",
+       "ITX.MC   1.077471e-13\n",
+       "MSFT     0.000000e+00\n",
+       "GOOGL    0.000000e+00\n",
+       "CSX      0.000000e+00\n",
+       "REP.MC   0.000000e+00\n",
+       "BBVA.MC  0.000000e+00\n",
+       "TEAM     0.000000e+00"
+      ]
+     },
+     "execution_count": 65,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pd.DataFrame(data=res, index=df.columns, columns=['res']).sort_values(by='res', ascending=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 66,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import tensorflow as tf \n",
+    "\n",
+    "def optimize_weights_with_adam(returns, target_return, learning_rate=0.01, epochs=1000):\n",
+    "  n = returns.shape[1]\n",
+    "  initial_weights = tf.ones((n,), dtype=tf.float32) / n\n",
+    "  returns_mean = tf.reduce_mean(returns, axis=0)\n",
+    "  returns_cov = tf.matmul(tf.transpose(returns - returns_mean), returns - returns_mean) / (returns.shape[0] - 1)\n",
+    "\n",
+    "  def portfolio_return(weights, mean_returns, cov_matrix):\n",
+    "    portfolio_return = tf.tensordot(weights, mean_returns, axes=1)\n",
+    "    portfolio_volatility = tf.sqrt(tf.tensordot(tf.tensordot(weights, cov_matrix, axes=1), weights, axes=1))\n",
+    "    return portfolio_return, portfolio_volatility\n",
+    "\n",
+    "  def loss_fn(weights, mean_returns, cov_matrix, target_return):\n",
+    "    portfolio_return, portfolio_volatility = portfolio_return(weights, mean_returns, cov_matrix)\n",
+    "    return -(portfolio_return - target_return) / portfolio_volatility\n",
+    "\n",
+    "  optimizer = tf.optimizers.Adam(learning_rate=learning_rate)\n",
+    "\n",
+    "  def train_step(weights, mean_returns, cov_matrix, target_return):\n",
+    "    with tf.GradientTape() as tape:\n",
+    "      loss_value = loss_fn(weights, mean_returns, cov_matrix, target_return)\n",
+    "    grads = tape.gradient(loss_value, weights)\n",
+    "    optimizer.apply_gradients(zip([grads], [weights]))\n",
+    "    return weights\n",
+    "\n",
+    "  weights = initial_weights\n",
+    "  for epoch in range(epochs):\n",
+    "    weights = train_step(weights, returns_mean, returns_cov, target_return)\n",
+    "  \n",
+    "  optimal_weights = weights / tf.reduce_sum(weights)\n",
+    "  return optimal_weights.numpy()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 67,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "res_adam = optimize_weights(df.pct_change(), 4)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 76,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>res</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>NVDA</th>\n",
+       "      <td>1.000000e+00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>SAN.PA</th>\n",
+       "      <td>6.272621e-13</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>ENG.MC</th>\n",
+       "      <td>5.107928e-13</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                 res\n",
+       "NVDA    1.000000e+00\n",
+       "SAN.PA  6.272621e-13\n",
+       "ENG.MC  5.107928e-13"
+      ]
+     },
+     "execution_count": 76,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pd.DataFrame(data=res_adam, index=df.columns, columns=['res']).sort_values(by='res', ascending=False)[:3]"
+   ]
   }
  ],
  "metadata": {
