updating risk free rate

--- a/qa-notebook.ipynb
+++ b/qa-notebook.ipynb
@@ -183,134 +183,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 77,
    "metadata": {},
    "outputs": [
     {
      "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>res</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>NVDA</th>\n",
-       "      <td>1.000000e+00</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>SAN.PA</th>\n",
-       "      <td>6.272621e-13</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>ENG.MC</th>\n",
-       "      <td>5.107928e-13</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>VID.MC</th>\n",
-       "      <td>4.966791e-13</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>ELE.MC</th>\n",
-       "      <td>3.625156e-13</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>IBE.MC</th>\n",
-       "      <td>2.932307e-13</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>OR.PA</th>\n",
-       "      <td>2.622694e-13</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>ATVI</th>\n",
-       "      <td>2.265133e-13</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>REGN</th>\n",
-       "      <td>1.685388e-13</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>AZN</th>\n",
-       "      <td>1.089198e-13</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>ITX.MC</th>\n",
-       "      <td>1.077471e-13</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>MSFT</th>\n",
-       "      <td>0.000000e+00</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>GOOGL</th>\n",
-       "      <td>0.000000e+00</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>CSX</th>\n",
-       "      <td>0.000000e+00</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>REP.MC</th>\n",
-       "      <td>0.000000e+00</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>BBVA.MC</th>\n",
-       "      <td>0.000000e+00</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>TEAM</th>\n",
-       "      <td>0.000000e+00</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
       "text/plain": [
-       "                  res\n",
-       "NVDA     1.000000e+00\n",
-       "SAN.PA   6.272621e-13\n",
-       "ENG.MC   5.107928e-13\n",
-       "VID.MC   4.966791e-13\n",
-       "ELE.MC   3.625156e-13\n",
-       "IBE.MC   2.932307e-13\n",
-       "OR.PA    2.622694e-13\n",
-       "ATVI     2.265133e-13\n",
-       "REGN     1.685388e-13\n",
-       "AZN      1.089198e-13\n",
-       "ITX.MC   1.077471e-13\n",
-       "MSFT     0.000000e+00\n",
-       "GOOGL    0.000000e+00\n",
-       "CSX      0.000000e+00\n",
-       "REP.MC   0.000000e+00\n",
-       "BBVA.MC  0.000000e+00\n",
-       "TEAM     0.000000e+00"
+       "['NVDA', 'SAN.PA', 'ENG.MC']"
       ]
      },
-     "execution_count": 65,
+     "execution_count": 77,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "pd.DataFrame(data=res, index=df.columns, columns=['res']).sort_values(by='res', ascending=False)"
+    "pd.DataFrame(data=res, index=df.columns, columns=['res']).sort_values(by='res', ascending=False)[:3].index.tolist()"
    ]
   },
   {
