--- a/qa-notebook.ipynb
+++ b/qa-notebook.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -73,7 +73,7 @@
        " 'csx']"
       ]
      },
-     "execution_count": 46,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -84,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -93,7 +93,7 @@
        "datetime.date(2020, 1, 1)"
       ]
      },
-     "execution_count": 47,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -104,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -122,7 +122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -136,7 +136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -149,7 +149,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -174,7 +174,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -183,7 +183,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -192,7 +192,7 @@
        "['NVDA', 'SAN.PA', 'ENG.MC']"
       ]
      },
-     "execution_count": 77,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -203,113 +203,69 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import tensorflow as tf \n",
-    "\n",
-    "def optimize_weights_with_adam(returns, target_return, learning_rate=0.01, epochs=1000):\n",
-    "  n = returns.shape[1]\n",
-    "  initial_weights = tf.ones((n,), dtype=tf.float32) / n\n",
-    "  returns_mean = tf.reduce_mean(returns, axis=0)\n",
-    "  returns_cov = tf.matmul(tf.transpose(returns - returns_mean), returns - returns_mean) / (returns.shape[0] - 1)\n",
-    "\n",
-    "  def portfolio_return(weights, mean_returns, cov_matrix):\n",
-    "    portfolio_return = tf.tensordot(weights, mean_returns, axes=1)\n",
-    "    portfolio_volatility = tf.sqrt(tf.tensordot(tf.tensordot(weights, cov_matrix, axes=1), weights, axes=1))\n",
-    "    return portfolio_return, portfolio_volatility\n",
-    "\n",
-    "  def loss_fn(weights, mean_returns, cov_matrix, target_return):\n",
-    "    portfolio_return, portfolio_volatility = portfolio_return(weights, mean_returns, cov_matrix)\n",
-    "    return -(portfolio_return - target_return) / portfolio_volatility\n",
-    "\n",
-    "  optimizer = tf.optimizers.Adam(learning_rate=learning_rate)\n",
-    "\n",
-    "  def train_step(weights, mean_returns, cov_matrix, target_return):\n",
-    "    with tf.GradientTape() as tape:\n",
-    "      loss_value = loss_fn(weights, mean_returns, cov_matrix, target_return)\n",
-    "    grads = tape.gradient(loss_value, weights)\n",
-    "    optimizer.apply_gradients(zip([grads], [weights]))\n",
-    "    return weights\n",
-    "\n",
-    "  weights = initial_weights\n",
-    "  for epoch in range(epochs):\n",
-    "    weights = train_step(weights, returns_mean, returns_cov, target_return)\n",
-    "  \n",
-    "  optimal_weights = weights / tf.reduce_sum(weights)\n",
-    "  return optimal_weights.numpy()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 67,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "res_adam = optimize_weights(df.pct_change(), 4)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>res</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>NVDA</th>\n",
-       "      <td>1.000000e+00</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>SAN.PA</th>\n",
-       "      <td>6.272621e-13</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>ENG.MC</th>\n",
-       "      <td>5.107928e-13</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
       "text/plain": [
-       "                 res\n",
-       "NVDA    1.000000e+00\n",
-       "SAN.PA  6.272621e-13\n",
-       "ENG.MC  5.107928e-13"
+       "0.17876103188362516"
       ]
      },
-     "execution_count": 76,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "pd.DataFrame(data=res_adam, index=df.columns, columns=['res']).sort_values(by='res', ascending=False)[:3]"
+    "returns = df.pct_change()\n",
+    "n = returns.shape[1]\n",
+    "weights = np.ones(n) / n\n",
+    "np.sum(returns.mean() * weights) * 252"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[<tf.Tensor: shape=(1, 1), dtype=float32, numpy=array([[-0.00019751]], dtype=float32)>, <tf.Tensor: shape=(1,), dtype=float32, numpy=array([0.00481659], dtype=float32)>]\n"
+     ]
+    }
+   ],
+   "source": [
+    "import tensorflow as tf\n",
+    "\n",
+    "def sharpe_ratio_loss(y_true, y_pred):\n",
+    "    # Sharpe ratio formula\n",
+    "    return -tf.reduce_mean((y_true - y_pred) / tf.math.reduce_std(y_true - y_pred))\n",
+    "\n",
+    "# Define the inputs\n",
+    "x = tf.constant([1.0, 2.0, 3.0, 4.0, 5.0])\n",
+    "y = tf.constant([0.5, 1.0, 1.5, 2.0, 2.5])\n",
+    "\n",
+    "# Define the model\n",
+    "model = tf.keras.Sequential([\n",
+    "    tf.keras.layers.Dense(units=1, input_shape=[1])\n",
+    "])\n",
+    "\n",
+    "# Compile the model\n",
+    "model.compile(optimizer=tf.keras.optimizers.SGD(learning_rate=0.01), loss=sharpe_ratio_loss)\n",
+    "\n",
+    "# Train the model\n",
+    "history = model.fit(x, y, epochs=1000, verbose=0)\n",
+    "\n",
+    "# Get the gradients\n",
+    "with tf.GradientTape() as tape:\n",
+    "    y_pred = model(x)\n",
+    "    loss = sharpe_ratio_loss(y, y_pred)\n",
+    "grads = tape.gradient(loss, model.trainable_variables)\n",
+    "\n",
+    "print(grads)"
    ]
   }
  ],
