--- a/qa-notebook.ipynb
+++ b/qa-notebook.ipynb
@@ -27,18 +27,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
-    "stocks = ['eng.mc','ele.mc', 'itx.mc', 'bbva.mc', 'vid.mc', 'rep.mc', 'ibe.mc', 'or.pa',\n",
-    "                'san.pa', 'azn', 'regn', 'atvi', 'msft', 'team', 'googl', 'nvda', 'csx']\n",
+    "stocks = ['tsla']\n",
     "start_date = datetime.date(2020, 1, 1)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -48,32 +47,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['eng.mc',\n",
-       " 'ele.mc',\n",
-       " 'itx.mc',\n",
-       " 'bbva.mc',\n",
-       " 'vid.mc',\n",
-       " 'rep.mc',\n",
-       " 'ibe.mc',\n",
-       " 'or.pa',\n",
-       " 'san.pa',\n",
-       " 'azn',\n",
-       " 'regn',\n",
-       " 'atvi',\n",
-       " 'msft',\n",
-       " 'team',\n",
-       " 'googl',\n",
-       " 'nvda',\n",
-       " 'csx']"
+       "['tsla']"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -84,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -93,7 +76,7 @@
        "datetime.date(2020, 1, 1)"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -104,20 +87,510 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[*********************100%***********************]  17 of 17 completed\n"
+      "[*********************100%***********************]  1 of 1 completed\n"
      ]
     }
    ],
    "source": [
     "df = get_data(stocks, start_date = \"2019-01-01\", end_date = \"2022-11-30\")       \n",
-    "df = df['Adj Close']"
+    "#df = df['Adj Close']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Open</th>\n",
+       "      <th>High</th>\n",
+       "      <th>Low</th>\n",
+       "      <th>Close</th>\n",
+       "      <th>Adj Close</th>\n",
+       "      <th>Volume</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Date</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>2018-12-31</th>\n",
+       "      <td>22.519333</td>\n",
+       "      <td>22.614000</td>\n",
+       "      <td>21.684000</td>\n",
+       "      <td>22.186666</td>\n",
+       "      <td>22.186666</td>\n",
+       "      <td>94534500</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2019-01-02</th>\n",
+       "      <td>20.406668</td>\n",
+       "      <td>21.008667</td>\n",
+       "      <td>19.920000</td>\n",
+       "      <td>20.674667</td>\n",
+       "      <td>20.674667</td>\n",
+       "      <td>174879000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2019-01-03</th>\n",
+       "      <td>20.466667</td>\n",
+       "      <td>20.626667</td>\n",
+       "      <td>19.825333</td>\n",
+       "      <td>20.024000</td>\n",
+       "      <td>20.024000</td>\n",
+       "      <td>104478000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2019-01-04</th>\n",
+       "      <td>20.400000</td>\n",
+       "      <td>21.200001</td>\n",
+       "      <td>20.181999</td>\n",
+       "      <td>21.179333</td>\n",
+       "      <td>21.179333</td>\n",
+       "      <td>110911500</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2019-01-07</th>\n",
+       "      <td>21.448000</td>\n",
+       "      <td>22.449333</td>\n",
+       "      <td>21.183332</td>\n",
+       "      <td>22.330667</td>\n",
+       "      <td>22.330667</td>\n",
+       "      <td>113268000</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                 Open       High        Low      Close  Adj Close     Volume\n",
+       "Date                                                                        \n",
+       "2018-12-31  22.519333  22.614000  21.684000  22.186666  22.186666   94534500\n",
+       "2019-01-02  20.406668  21.008667  19.920000  20.674667  20.674667  174879000\n",
+       "2019-01-03  20.466667  20.626667  19.825333  20.024000  20.024000  104478000\n",
+       "2019-01-04  20.400000  21.200001  20.181999  21.179333  21.179333  110911500\n",
+       "2019-01-07  21.448000  22.449333  21.183332  22.330667  22.330667  113268000"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 70,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def compute_strat_8(df, capital):\n",
+    "    df[\"buy\"] = 0\n",
+    "    df[\"sell\"] = 0\n",
+    "    df[\"position\"] = 0\n",
+    "\n",
+    "    # Define Fibonacci levels\n",
+    "    fibonacci_levels = [0.236, 0.382, 0.618]\n",
+    "\n",
+    "    for i in range(2, len(df)):\n",
+    "        current_price = df.iloc[i-2][\"Close\"]\n",
+    "        previous_high = df.iloc[-4:i-2][\"High\"].max()\n",
+    "        previous_low = df.iloc[-4:i-2][\"Low\"].min()\n",
+    "\n",
+    "        price_range = previous_high - previous_low\n",
+    "\n",
+    "        buy_price = current_price - (fibonacci_levels[1] * price_range)\n",
+    "        sell_price = current_price + (fibonacci_levels[1] * price_range)\n",
+    "\n",
+    "        if df.iloc[i - 1][\"position\"] == 1:\n",
+    "            if current_price >= sell_price:\n",
+    "                capital += df.iloc[i - 1][\"position\"] * current_price\n",
+    "                df.at[i, \"sell\"] = 1\n",
+    "                df.at[i, \"position\"] = 0\n",
+    "        else:\n",
+    "            if current_price <= buy_price:\n",
+    "                shares_to_buy = int(capital / current_price)\n",
+    "                capital -= shares_to_buy * current_price\n",
+    "                df.at[i, \"buy\"] = 1\n",
+    "                df.at[i, \"position\"] = shares_to_buy\n",
+    "\n",
+    "    return df\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "current_price = df.iloc[len(df)-2][\"Close\"]\n",
+    "previous_high = df.iloc[-5:len(df)-2][\"High\"].max()\n",
+    "previous_low = df.iloc[-5:len(df)-2][\"Low\"].min()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fibonacci_levels = [0.236, 0.382, 0.618]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 65,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "price_range = previous_high - previous_low\n",
+    "buy_price = current_price - (fibonacci_levels[1] * price_range)\n",
+    "sell_price = current_price + (fibonacci_levels[1] * price_range)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(182.9199981689453, 185.1999969482422, 166.19000244140625)"
+      ]
+     },
+     "execution_count": 57,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "current_price, previous_high, previous_low"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 66,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(19.009994506835938, 175.658180267334, 190.18181607055664)"
+      ]
+     },
+     "execution_count": 66,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "price_range, buy_price, sell_price"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 71,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_results = compute_strat_8(df, 1000)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 72,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Open</th>\n",
+       "      <th>High</th>\n",
+       "      <th>Low</th>\n",
+       "      <th>Close</th>\n",
+       "      <th>Adj Close</th>\n",
+       "      <th>Volume</th>\n",
+       "      <th>buy</th>\n",
+       "      <th>sell</th>\n",
+       "      <th>position</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Date</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>2022-11-11</th>\n",
+       "      <td>186.000000</td>\n",
+       "      <td>196.520004</td>\n",
+       "      <td>182.589996</td>\n",
+       "      <td>195.970001</td>\n",
+       "      <td>195.970001</td>\n",
+       "      <td>114403600</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2022-11-14</th>\n",
+       "      <td>192.770004</td>\n",
+       "      <td>195.729996</td>\n",
+       "      <td>186.339996</td>\n",
+       "      <td>190.949997</td>\n",
+       "      <td>190.949997</td>\n",
+       "      <td>92226600</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2022-11-15</th>\n",
+       "      <td>195.880005</td>\n",
+       "      <td>200.820007</td>\n",
+       "      <td>192.059998</td>\n",
+       "      <td>194.419998</td>\n",
+       "      <td>194.419998</td>\n",
+       "      <td>91293800</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2022-11-16</th>\n",
+       "      <td>191.509995</td>\n",
+       "      <td>192.570007</td>\n",
+       "      <td>185.660004</td>\n",
+       "      <td>186.919998</td>\n",
+       "      <td>186.919998</td>\n",
+       "      <td>66567600</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2022-11-17</th>\n",
+       "      <td>183.960007</td>\n",
+       "      <td>186.160004</td>\n",
+       "      <td>180.899994</td>\n",
+       "      <td>183.169998</td>\n",
+       "      <td>183.169998</td>\n",
+       "      <td>64336000</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2022-11-18</th>\n",
+       "      <td>185.050003</td>\n",
+       "      <td>185.190002</td>\n",
+       "      <td>176.550003</td>\n",
+       "      <td>180.190002</td>\n",
+       "      <td>180.190002</td>\n",
+       "      <td>76048900</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2022-11-21</th>\n",
+       "      <td>175.850006</td>\n",
+       "      <td>176.770004</td>\n",
+       "      <td>167.539993</td>\n",
+       "      <td>167.869995</td>\n",
+       "      <td>167.869995</td>\n",
+       "      <td>92882700</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2022-11-22</th>\n",
+       "      <td>168.630005</td>\n",
+       "      <td>170.919998</td>\n",
+       "      <td>166.190002</td>\n",
+       "      <td>169.910004</td>\n",
+       "      <td>169.910004</td>\n",
+       "      <td>78452300</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2022-11-23</th>\n",
+       "      <td>173.570007</td>\n",
+       "      <td>183.619995</td>\n",
+       "      <td>172.500000</td>\n",
+       "      <td>183.199997</td>\n",
+       "      <td>183.199997</td>\n",
+       "      <td>109536700</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2022-11-25</th>\n",
+       "      <td>185.059998</td>\n",
+       "      <td>185.199997</td>\n",
+       "      <td>180.630005</td>\n",
+       "      <td>182.860001</td>\n",
+       "      <td>182.860001</td>\n",
+       "      <td>50672700</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2022-11-28</th>\n",
+       "      <td>179.960007</td>\n",
+       "      <td>188.500000</td>\n",
+       "      <td>179.000000</td>\n",
+       "      <td>182.919998</td>\n",
+       "      <td>182.919998</td>\n",
+       "      <td>92905200</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2022-11-29</th>\n",
+       "      <td>184.990005</td>\n",
+       "      <td>186.380005</td>\n",
+       "      <td>178.750000</td>\n",
+       "      <td>180.830002</td>\n",
+       "      <td>180.830002</td>\n",
+       "      <td>83357100</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                  Open        High         Low       Close   Adj Close  \\\n",
+       "Date                                                                     \n",
+       "2022-11-11  186.000000  196.520004  182.589996  195.970001  195.970001   \n",
+       "2022-11-14  192.770004  195.729996  186.339996  190.949997  190.949997   \n",
+       "2022-11-15  195.880005  200.820007  192.059998  194.419998  194.419998   \n",
+       "2022-11-16  191.509995  192.570007  185.660004  186.919998  186.919998   \n",
+       "2022-11-17  183.960007  186.160004  180.899994  183.169998  183.169998   \n",
+       "2022-11-18  185.050003  185.190002  176.550003  180.190002  180.190002   \n",
+       "2022-11-21  175.850006  176.770004  167.539993  167.869995  167.869995   \n",
+       "2022-11-22  168.630005  170.919998  166.190002  169.910004  169.910004   \n",
+       "2022-11-23  173.570007  183.619995  172.500000  183.199997  183.199997   \n",
+       "2022-11-25  185.059998  185.199997  180.630005  182.860001  182.860001   \n",
+       "2022-11-28  179.960007  188.500000  179.000000  182.919998  182.919998   \n",
+       "2022-11-29  184.990005  186.380005  178.750000  180.830002  180.830002   \n",
+       "\n",
+       "               Volume  buy  sell  position  \n",
+       "Date                                        \n",
+       "2022-11-11  114403600    0     0         0  \n",
+       "2022-11-14   92226600    0     0         0  \n",
+       "2022-11-15   91293800    0     0         0  \n",
+       "2022-11-16   66567600    0     0         0  \n",
+       "2022-11-17   64336000    0     0         0  \n",
+       "2022-11-18   76048900    0     0         0  \n",
+       "2022-11-21   92882700    0     0         0  \n",
+       "2022-11-22   78452300    0     0         0  \n",
+       "2022-11-23  109536700    0     0         0  \n",
+       "2022-11-25   50672700    0     0         0  \n",
+       "2022-11-28   92905200    0     0         0  \n",
+       "2022-11-29   83357100    0     0         0  "
+      ]
+     },
+     "execution_count": 72,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_results.tail(12)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1188.813309188609"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "final_capital"
    ]
   },
   {
@@ -285,7 +758,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.5"
+   "version": "3.9.6"
   },
   "orig_nbformat": 4,
   "vscode": {
